# Mini-Live2D-AI

./: .gitignore  CONFIG.md  DEVELOPMENT.md  INSTALL.md  README.md
backend/: .env.template  build.spec  config.json  llm_client.py  main.py  pyproject.toml  vision.py
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: index.html  main.js  styles.css
frontend/live2d-models/黍黍模型-by什行在要/runtime/: 黍.model3.json
